Fixed sewing gift center icon on mobile devices

--- a/style/scss/index.scss
+++ b/style/scss/index.scss
@@ -262,7 +262,7 @@
     @media (max-width: 576px) {
       flex-direction: column;
 
-      svg {
+      .gift {
         margin-right: 0;
         margin-bottom: 10px;
       }
